--- a/src/app/pages/consultorios/consultorios.component.html
+++ b/src/app/pages/consultorios/consultorios.component.html
@@ -66,20 +66,22 @@
           </span>
         </td>
         <td>
-          <p-button 
-            icon="pi pi-pencil" 
-            styleClass="p-button-secondary p-button-sm"
-            [pTooltip]="'Editar consultorio'"
-            tooltipPosition="top"
-            (onClick)="openEditForm(consultorio)">
-          </p-button>
-          <p-button 
-            icon="pi pi-trash" 
-            styleClass="p-button-danger p-button-sm"
-            [pTooltip]="'Eliminar consultorio'"
-            tooltipPosition="top"
-            (onClick)="deleteConsultorio(consultorio.id_consultorio!)">
-          </p-button>
+          <div class="action-buttons">
+            <p-button 
+              icon="pi pi-pencil" 
+              styleClass="p-button-rounded p-button-text p-button-warning"
+              [pTooltip]="'Editar consultorio'"
+              tooltipPosition="top"
+              (onClick)="openEditForm(consultorio)">
+            </p-button>
+            <p-button 
+              icon="pi pi-trash" 
+              styleClass="p-button-rounded p-button-text p-button-danger"
+              [pTooltip]="'Eliminar consultorio'"
+              tooltipPosition="top"
+              (onClick)="deleteConsultorio(consultorio.id_consultorio!)">
+            </p-button>
+          </div>
         </td>
       </tr>
     </ng-template>
